# digiramarust

./: README.md  rust-toolchain.toml
backend/: Cargo.toml
backend/src/: main.rs
cli/: Cargo.toml
embedded/: Cargo.toml
webapp/: Cargo.toml
